--- a/week-3/03-mongo/package.json
+++ b/week-3/03-mongo/package.json
@@ -15,7 +15,6 @@
     "jest": "^29.7.0",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3",
-    "ts-node": "^10.9.2",
-    "zod": "^3.22.4"
+    "ts-node": "^10.9.2"
   }
 }
